# crud-rest-template-rs

./: .env  Cargo.toml  README.md  docker-compose.yml  init.sql  reqs.http
src/: config.rs  main.rs
src/model/: estudiante.rs  mod.rs
src/repository/: crud.rs  estudiante_repo.rs  mod.rs
src/service/: estudiante.rs  mod.rs
